assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
@font-face {
    font-family: "logo-font";
    src: url(../fonts/logo-font.ttf) format("truetype");
}

/* --------------------------------- Body */

body {
    font-family: 'Roboto', sans-serif;
    text-align: center;
    color: #fff;
}

.uppercase {
    text-transform: uppercase;
}

.row {
    margin: 0;
}

.section-heading {
    position: relative;
    text-shadow: 1px 1px 2px black;
    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
    font-size: 40px;
}

.section-heading span {
    position: absolute;
    top: -130px;
}

/* --------------------------------- Button */

.btn-dark {
    background-color: #964B35;
    font-family: 'Roboto', Arial, sans-serif;
    border-color: #964B35;
    font-size: 22px;
}

.btn-dark:hover {
    background-color: #633324;
    border-color: #633324;
}

.btn-dark:not(:disabled):not(.disabled).active,
.btn-dark:not(:disabled):not(.disabled):active,
.show>.btn-dark.dropdown-toggle {
    background-color: #633324;
    border-color: #633324;
}

.dropdown-menu {
    background-color: #964B35;
    z-index: 12;
}

.dropdown-item {
    background-color: #964B35;
    color: #fff;
    text-align: center;
    text-transform: uppercase;
}

.dropdown-item:hover {
    color: #fff;
    background-color: #633324;
}

.down-btn {
    background-color: rgba(150, 75, 53, 1);
    height: 30px;
    width: 30px;
    border-radius: 50%;
    text-align: center;
}

.down-btn-lg {
    background-color: rgba(150, 75, 53, 1);
    height: 55px;
    width: 55px;
    border-radius: 50%;
}

.down-btn-lg:hover {
    background-color: rgba(150, 75, 53, 0.7);
}

.jump-to-video-btn i {
    color: #fff;
    font-size: 15px;
}

.jump-to-video-btn-lg i {
    color: #fff;
    font-size: 30px;
    padding-top: 5px;
}

.buy-btn {
    width: 100%;
    max-width: 190px;
    box-sizing: border-box;
    font-weight: bold;
}

.btn-sm {
    font-size: 16px;
}

/* --------------------------------- Hover Effects */

.hvr-underline-from-center:before {
    background: #000;
}

/* --------------------------------- Nav Bar */

.navbar {
    width: 100vw;
    background-color: #000;
    border-bottom: 1px solid #fff;
}

.navbar-brand {
    margin: 0;
}

.nav-item {
    height: 50px;
    text-align: center;
    padding: 0 10px 0 0;
    float: right;
}

.nav-item a {
    width: 100%;
    text-decoration: none;
    color: #fff;
    height: 50px;
}

.nav-item span {
    width: 100%;
    padding-top: 20px;
    text-align: center;
    text-transform: uppercase;
    font-size: 22px;
    font-weight: 300;
    letter-spacing: 2px;
    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
}

.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link:hover {
    color: #fff;
}

.navbar-toggler {
    border-color: #fff;
}

/* --------------------------------- Landing */

#carouselHeader {
    margin-top: 71px;
}

.carousel-item img {
    padding: 0;
}

#carousel-img-1::before,
#carousel-img-2::before,
#carousel-img-3::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
    background: rgba(0, 0, 0, 0.4);
}

.carousel-caption {
    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
    padding-bottom: 0;
}

.carousel-control-next-icon,
.carousel-control-prev-icon {
    width: 40px;
    height: 40px;
}

#carousel-img-3 .carousel-caption {
    padding-bottom: 0px;
}

.slide-caption-lg {
    font-size: 50px;
    text-shadow: 1px 1px 2px black;
}

.slide-caption-sm {
    font-size: 35px;
    text-shadow: 1px 1px 2px black;
}

/* --------------------------------- Section Containers */

.container-wrapper--about {
    background: linear-gradient(rgba(99, 51, 36, 0.5), rgba(99, 51, 36, 0.5)), url('../images/about-background.jpg') no-repeat top right;
    background-attachment: fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    width: 100%;
}

.container-wrapper--music {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/music-background.jpg') no-repeat top right;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;            
    width: 100%;
}

.container-wrapper--merch {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/Cranberries-1996-slide.jpg') no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    width: 100%;
}

.container-wrapper--video {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/tour-background.jpg') no-repeat center center;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;        
    -o-background-size: cover;
    width: 100%;
}

.container-wrapper--tour {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/The-Cranberries-920x584.jpg') no-repeat top center;
    background-attachment: fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    padding-bottom: 40px;
    width: 100%;
}

.container-wrapper--contact {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/oriordan.jpeg') no-repeat center center;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    padding-bottom: 40px;
    width: 100%;
}

.about-content-container,
.music-content-container,
.merch-content-container,
.video-content-container,
.tour-content-container,
.social-content-container,
.news-content-container,
.contact-content-container {
    padding: 30px 20px 30px 20px;
}

.landing-content-container {
    padding: 0;
}

/* --------------------------------- About */

.about-heading {
    text-transform: uppercase;
    text-align: center;
    margin: auto;
    padding-bottom: 40px;
}

.bio-content {
    text-align: left;
    padding: 20px;
    background-color: rgba(52, 58, 64, 0.8);
    border-radius: 20px;
}

.profile-pics {
    border-radius: 50%;
    max-height: 200px;
    margin-top: 30px;
}

.profile-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 200px;
    width: 200px;
    border-radius: 50%;
    opacity: 0;
    transition: .5s ease;
    background-color: #964B35;
    z-index: 2;
    margin: auto;
    margin-top: 30px;
}

.profile-container {
    position: relative;
}

.profile-container:hover .profile-overlay {
    opacity: 1;
}

.profile-container figcaption {
    text-shadow: 1px 1px 2px black;
}

.hover-text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
}

/* --------------------------------- Music */

.music-heading {
    text-transform: uppercase;
    text-align: center;
    margin: auto;
    padding-bottom: 40px;
}

.music-player {
    padding-bottom: 4%;
    padding-top: 5%;
    width: 100%;
    margin: auto;
    border: none;
}

/* --------------------------------- Merch */

.merch-heading {
    text-transform: uppercase;
    text-align: center;
    margin: auto;
    padding-bottom: 40px;
}

.card-row-2 .card {
    margin-top: 0;
}

.card {
    margin: auto;
    color: #000;
    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
    width: 18rem;
}

.visit-btn {
    margin-top: 40px;
}

/* --------------------------------- Video */

.video-heading {
    text-transform: uppercase;
    text-align: center;
    margin: auto;
}

.video-container {
    height: 0;
    overflow: hidden;
    border: none;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.video-container-ratio {
    padding-bottom: 45%;
}

.video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding-bottom: 40px;
}

/* --------------------------------- Tour */

.tour-table {
    width: 60%;
    font-size: 0.7rem;
    margin: 0 auto;
}

/* --------------------------------- Contact */

.contact-heading {
    text-transform: uppercase;
    text-align: center;
    margin: auto;
}

.form-container h3 {
    text-shadow: 1px 1px 2px black;
}

form label {
    font-size: 22px;
    text-shadow: 1px 1px 2px black;
}

.date-select,
.venue-size {
    padding: 0;
}

/* --------------------------------- Footer */

footer {
    background-color: #000;
}

.footer-heading {
    padding-bottom: 10px;
}

.social-links li a i {
    font-size: 45px;
    color: #fff;
    padding: 12px;
    transform: translateY(0%);
}

.social-links li a i:hover {
    color: #964B35;
}

.signup-btn {
    margin: auto;
}

.footer-col-2 {
    margin-top: 30px;
    padding: 0;
}

.email-box {
    margin: auto;
}

.newsletter-signup {
    max-width: 60vw;
    margin: auto;
}

/* --------------------------------- Media Queries */

@media only screen and (min-width: 321px) {
    .tour-table {
            font-size: 0.9rem;
    }
}

@media only screen and (min-width: 576px) {
    .about-content-container,
    .music-content-container,
    .merch-content-container,
    .video-content-container,
    .tour-content-container,
    .social-content-container,
    .news-content-container,
    .contact-content-container {
        padding: 60px 40px 60px 40px;
    }
    #carouselHeader {
        margin-top: 92px;
    }
    h2 span {
        position: absolute;
        top: -150px;
    }
    .profile-pics-container {
        margin-top: 15%;
    }
    .duration-select {
        padding-right: 15px;
    }
    .venue-size {
        padding-left: 15px;
    }
    .footer-col-1 {
        margin-top: 0;
    }
    .tour-table {
            font-size: 1rem;
    }
}

@media only screen and (min-width: 768px) {
    .card-row-2 {
        margin-top: 40px;
    }
    .carousel-caption {
        padding-bottom: 50px;
    }
    #carousel-img-3 .carousel-caption {
        padding-bottom: 20px;
    }
}

@media only screen and (min-width: 992px) {
    .card-row-1 .card {
        margin-top: 0;
    }
    .card-col {
        margin-top: 0;
    }
    .profile-pics-container {
        margin-top: 10%;
    }
    .form-container {
        width: 60%;
        margin: auto;
    }
    .social-links {
        transform: translateY(50%);
    }
    .hvr-underline-from-center:before {
        background: #964B35;
    }
    .section-heading {
        font-size: 50px;
    }
    .video-container {
        width: 60%;
    }
}

/* --------------------------------- Testing Code */

/** {*/

/*    background: #000 !important;*/

/*    color: #0f0 !important;*/

/*    outline: solid #f00 1px !important;*/

/*}*/

